[package]
name = "sc"
version = "0.1.0"
authors = ["Mitch Gollub <mgollub@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
clap = { version = "2.33.3", features = ["yaml"] }
tokio = { version = "1.9.0", features = ["full"] }
color-eyre = "0.5.11"
tracing = "0.1.26" 
tracing-subscriber = "0.2.19"
